--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,18 +1,71 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {% block stylesheets %}
-            <link rel="stylesheet" href="{{ asset('styles/app.css') }}">
-        {% endblock %}
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <title>{% block title %}Welcome!{% endblock %}</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 128 128'><text y='1.2em' font-size='96'>⚫️</text></svg>">
+    {% block stylesheets %}
+        <link rel="stylesheet" href="{{ asset('styles/app.css') }}">
+        <style>
+            nav {
+                background-color: #007bff;
+                color: white;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                height: 60px;
+                padding: 0 20px;
+            }
+            nav a {
+                color: white;
+                text-decoration: none;
+                width: fit-content;
+                padding: 10px 15px;
+            }
+            nav a:hover {
+                background-color: #0056b3;
+                border-radius: 5px;
+            }
+            .navbar-brand {
+                font-weight: bold;
+                font-size: 20px;
+            }
+            .navbar-link {
+                display: flex;
+                align-items: center;
+            }
+        </style>
+    {% endblock %}
 
-        {% block javascripts %}
-            {{ importmap() }}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
+    {% block javascripts %}
+        {{ importmap() }}
+    {% endblock %}
+</head>
+<body>
+    {% if app.user %}
+        <nav>
+            <div class="navbar-brand">MonServicePDF</div>
+            <div  class="navbar-link">
+                <a href="{{ path('app_home') }}">Home</a>
+                <a href="{{ path('app_pdf_generate') }}">Generate PDF</a>
+                <a href="{{ path('app_profil') }}">Profil</a>
+                <a href="{{ path('app_logout') }}">Logout</a>
+            </div>
+        </nav>
+    {% else %}
+        <!-- Section d'inscription visible seulement pour les visiteurs non connectés -->
+        <nav>
+            <div class="navbar-brand">MonServicePDF</div>
+            <div class="navbar-link">
+                <a href="{{ path('app_register') }}">S'inscrire</a>
+                <a href="{{ path('app_login') }}">Se connecter</a>
+            </div>
+        </nav>
+    {% endif %}
+    {% block body %}
+        <div class="container">
+
+        </div>
+    {% endblock %}
+</body>
 </html>
