feat : change en to fr

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -46,10 +46,10 @@
         <nav>
             <div class="navbar-brand">MonServicePDF</div>
             <div  class="navbar-link">
-                <a href="{{ path('app_home') }}">Home</a>
-                <a href="{{ path('app_pdf_generate') }}">Generate PDF</a>
-                <a href="{{ path('app_profil') }}">Profil</a>
-                <a href="{{ path('app_logout') }}">Logout</a>
+                <a href="{{ path('app_home') }}">Accueil</a>
+                <a href="{{ path('app_pdf_generate') }}">Générer un PDF</a>
+                <a href="{{ path('app_profil') }}">Profile</a>
+                <a href="{{ path('app_logout') }}">Se déconnecter</a>
             </div>
         </nav>
     {% else %}
