--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -14,6 +14,7 @@ body {
 
 .container {
     width: 70%;
+    height: calc(100vh - 60px);
     margin: auto;
     overflow: hidden;
     padding: 20px;
@@ -21,6 +22,7 @@ body {
 
 .login-register-container {
     width: 50%;
+    height: calc(100vh - 60px);
     margin: auto;
     overflow: hidden;
     padding: 20px;
@@ -30,7 +32,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: calc(100vh - 60px);
+    height: 100%;
 }
 
 form{
