--- a/templates/profil/index.html.twig
+++ b/templates/profil/index.html.twig
@@ -40,7 +40,7 @@
 
         <div class="link-section">
             <a href="{{ path('app_password_edit') }}">Modifier mon mot de passe</a>
-            {% if user.getSubscription() is null or user.getSubscription().getId() == 1 %}
+            {% if user.getSubscription() is null or user.getSubscription().getId() == freeSubscriptionId %}
                 <a href="{{ path('app_subscription') }}">Souscrire à un abonnement</a>
             {% else %}
                 <a href="{{ path('app_unsubscribe') }}" onclick="return confirm('Êtes-vous sûr de vouloir vous désabonner ?')">Se désabonner</a>
